[gd_scene load_steps=2 format=3 uid="uid://bwvclmkccbdtc"]

[ext_resource type="Script" path="res://deckbuilder/DeckPicker.gd" id="1_o51fi"]

[node name="DeckPicker" type="ScrollContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
script = ExtResource("1_o51fi")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ReturnButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Return"

[node name="NewDeck" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "New Deck"

[connection signal="pressed" from="VBoxContainer/ReturnButton" to="." method="_on_return_button_pressed"]
[connection signal="pressed" from="VBoxContainer/NewDeck" to="." method="_on_new_deck_pressed"]
